workflow-manager/workflow-manager-service/src/main/antlr4/com/synaptix/taskmanager/antlr/GraphCalc.g4
grammar GraphCalc;

compile: expr EOF
       ;

expr: exprOr
    ;

exprOr: exprAnd (OR exprAnd)*
      ;

exprAnd: exprNext (AND exprNext)*
       ;

exprNext: first=factor (NEXT factor)*
    ;

factor: ID                 # id
      | LPAREN expr RPAREN # parens
      ;

NEXT : '=>' ;
AND : ',' ;
OR : '|' ;
LPAREN : '(' ;
RPAREN : ')' ;
ID : ('a'..'z'|'A'..'Z'|'0'..'9'|'_'|'-')+ ;
